--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,10 +6,13 @@
     "types": []
   },
   "files": [
-    "src/main.ts",
+    "src/admin-main.ts",
     "src/polyfills.ts"
   ],
   "include": [
     "src/**/*.d.ts"
+  ],
+  "exclude": [
+    "src/assets/admin_lte/*"
   ]
 }
