--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,8 @@
               "src/assets/admin_lte/dist/css/adminlte.min.css",
               "src/assets/admin_lte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css",
               "src/assets/admin_lte/plugins/daterangepicker/daterangepicker.css",
-              "src/assets/admin_lte/plugins/summernote/summernote-bs4.css"
+              "src/assets/admin_lte/plugins/summernote/summernote-bs4.css",
+              "node_modules/gridstack/dist/gridstack.css"
             ],
             "scripts": [
               "src/assets/admin_lte/plugins/jquery/jquery.min.js",
@@ -53,7 +54,9 @@
               "src/assets/admin_lte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js",
               "src/assets/admin_lte/plugins/sparklines/sparkline.js",
               "src/assets/admin_lte/dist/js/adminlte.min.js",
-              "src/assets/admin_lte/dist/js/demo.js"
+              "src/assets/admin_lte/dist/js/demo.js",
+              "node_modules/lodash/lodash.min.js",
+              "node_modules/gridstack/dist/gridstack.all.js"
             ]
           },
           "configurations": {
