JQuery declaration files

--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,7 @@
               "node_modules/gridstack/dist/gridstack.css"
             ],
             "scripts": [
-              "src/assets/admin_lte/plugins/jquery/jquery.min.js",
+              "src/assets/admin_lte/plugins/jquery/jquery.js",
               "src/assets/admin_lte/plugins/jquery-ui/jquery-ui.min.js",
               "src/assets/admin_lte/plugins/bootstrap/js/bootstrap.bundle.min.js",
               "src/assets/admin_lte/plugins/chart.js/Chart.min.js",
