--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@angular/compiler-cli": "~10.0.6",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.1",
+    "@types/jqueryui": "^1.12.13",
     "@types/node": "^12.11.1",
     "@types/sortablejs": "^1.10.5",
     "codelyzer": "^6.0.0",
