--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "document-offset": "^1.0.4",
     "gridstack": "^2.0.0",
     "ngx-sortablejs": "^3.1.4",
     "rxjs": "~6.5.5",
