refactoring + install ngmodal

--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
               "src/assets/admin_lte/plugins/fontawesome-free/css/all.min.css",
               "src/assets/admin_lte/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css",
