--- a/backend/sitebuilder/config/packages/doctrine.yaml
+++ b/backend/sitebuilder/config/packages/doctrine.yaml
@@ -1,6 +1,13 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
+        default_connection:       default
+        connections:
+            default:
+                dbname:           sitebuilder
+                user:             root
+                password:         '%env(resolve:DATABASE_PASS)%'
+                host:             10.3.0.3
+                server_version:   '8.0.21'
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
