--- a/backend/sitebuilder/.env
+++ b/backend/sitebuilder/.env
@@ -30,3 +30,9 @@ APP_SECRET=7973274c0fecbeeae52f251b332bf746
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=ac22ea81b158e5a6fdd339ec0a68f076
+###< lexik/jwt-authentication-bundle ###
