update access control

--- a/backend/sitebuilder/config/routes/annotations.yaml
+++ b/backend/sitebuilder/config/routes/annotations.yaml
@@ -5,3 +5,8 @@ controllers:
 kernel:
     resource: ../../src/Kernel.php
     type: annotation
+
+frontend_components:
+    resource: ../../src/Controller/FrontendComponents
+    type: annotation
+    prefix: /api
