generate routes for frontend #2

--- a/backend/sitebuilder/config/routes/annotations.yaml
+++ b/backend/sitebuilder/config/routes/annotations.yaml
@@ -10,3 +10,5 @@ frontend_components:
     resource: ../../src/Controller/FrontendComponents
     type: annotation
     prefix: /api
+    options:
+        expose: true
