--- a/backend/sitebuilder/composer.json
+++ b/backend/sitebuilder/composer.json
@@ -14,6 +14,7 @@
         "friendsofsymfony/jsrouting-bundle": "^2.6",
         "jms/serializer-bundle": "^3.7.0",
         "lexik/jwt-authentication-bundle": "^2.8",
+        "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.1.*",
