--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.6",
+    "@angular/animations": "^10.0.14",
     "@angular/common": "~10.0.6",
     "@angular/compiler": "~10.0.6",
     "@angular/core": "~10.0.6",
@@ -26,6 +26,7 @@
     "gridstack": "^2.0.0",
     "jwt-decode": "^3.1.1",
     "ngx-sortablejs": "^3.1.4",
+    "ngx-toastr": "^13.1.0",
     "rxjs": "~6.5.5",
     "sortablejs": "^1.10.2",
     "tslib": "^2.0.0",
