--- a/backend/sitebuilder/config/services.yaml
+++ b/backend/sitebuilder/config/services.yaml
@@ -40,3 +40,11 @@ services:
                 event: prePersist
                 entity: 'App\Entity\User'
 
+
+    App\Service\Plugin\TextPluginService:
+        tags:
+            - { name: 'plugin_service', key: 'text_plugin' }
+
+    App\Form\PageBuilder\EventSubscriber\AddPluginFieldSubscriber:
+        arguments: [!tagged { tag: 'plugin_service', index_by: 'key' }]
+
