--- a/backend/docker-backend/images/php-fpm-8.0/Dockerfile
+++ b/backend/docker-backend/images/php-fpm-8.0/Dockerfile
@@ -2,6 +2,7 @@ FROM php:8.0.0-fpm
 
 ARG INSTALLER_PATH=/usr/local/installphp
 ARG INSTALLER_NAME=installer.sh
+ARG NODE_ENV
 
 WORKDIR /usr/local/installphp
 COPY ./$INSTALLER_NAME $INSTALLER_PATH
