--- a/backend/docker-backend/docker-compose.yml
+++ b/backend/docker-backend/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 services:
   mysql:
     image: mysql:8.0.21
@@ -9,3 +9,6 @@ services:
 
   php-fpm:
     build: images/php-fpm
+
+#  php-fpm-8.0:
+#    build: images/php-fpm-8.0
