--- a/backend/sitebuilder/config/packages/jms_serializer.yaml
+++ b/backend/sitebuilder/config/packages/jms_serializer.yaml
@@ -2,12 +2,8 @@ jms_serializer:
     visitors:
         xml_serialization:
             format_output: '%kernel.debug%'
-#    metadata:
-#        auto_detection: false
-#        directories:
-#            any-name:
-#                namespace_prefix: "My\\FooBundle"
-#                path: "@MyFooBundle/Resources/config/serializer"
-#            another-name:
-#                namespace_prefix: "My\\BarBundle"
-#                path: "@MyBarBundle/Resources/config/serializer"
+    default_context:
+        serialization:
+            serialize_null: false
+    property_naming:
+        id: 'jms_serializer.identical_property_naming_strategy'
