--- a/backend/sitebuilder/config/services.yaml
+++ b/backend/sitebuilder/config/services.yaml
@@ -45,6 +45,10 @@ services:
         tags:
             - { name: 'plugin_service', key: 'text_plugin' }
 
+    App\Service\Plugin\ImagePluginService:
+        tags:
+            - { name: 'plugin_service', key: 'image_plugin' }
+
     App\Form\PageBuilder\EventSubscriber\AddPluginFieldSubscriber:
         arguments: [!tagged { tag: 'plugin_service', index_by: 'key' }]
 
