--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^10.0.14",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.0.6",
     "@angular/compiler": "~10.0.6",
     "@angular/core": "~10.0.6",
     "@angular/forms": "~10.0.6",
     "@angular/localize": "~10.0.6",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
