plugins load from db

--- a/backend/sitebuilder/config/services.yaml
+++ b/backend/sitebuilder/config/services.yaml
@@ -40,6 +40,13 @@ services:
                 event: prePersist
                 entity: 'App\Entity\User'
 
+    App\EventListener\Doctrine\PluginResolveIdentifierListener:
+        tags:
+            -
+                name: doctrine.orm.entity_listener
+                event: postLoad
+                entity: 'App\Entity\SiteBuilder\Plugin\TextPlugin'
+
 
     App\Service\Plugin\TextPluginService:
         tags:
