--- a/backend/docker-backend/docker-compose-dev-local.yml
+++ b/backend/docker-backend/docker-compose-dev-local.yml
@@ -31,6 +31,14 @@ services:
     environment:
       - NODE_ENV=dev-local
 
+  php-fpm-8.0:
+    networks:
+      docker_network_sitebuilder:
+        ipv4_address: 10.3.0.7
+    volumes:
+      - ../sitebuilder:/var/www
+    environment:
+      - NODE_ENV=dev-local
 
   adminer:
     image: adminer:latest
