--- a/backend/docker-backend/docker-compose.yml
+++ b/backend/docker-backend/docker-compose.yml
@@ -10,5 +10,5 @@ services:
   php-fpm:
     build: images/php-fpm
 
-#  php-fpm-8.0:
-#    build: images/php-fpm-8.0
+  php-fpm-8.0:
+    build: images/php-fpm-8.0
