--- a/backend/sitebuilder/config/services.yaml
+++ b/backend/sitebuilder/config/services.yaml
@@ -40,13 +40,18 @@ services:
                 event: prePersist
                 entity: 'App\Entity\User'
 
-    App\EventListener\Doctrine\PluginResolveIdentifierListener:
+    App\EventListener\Doctrine\PageBuilder\PluginResolveIdentifierListener:
         tags:
             -
                 name: doctrine.orm.entity_listener
                 event: postLoad
                 entity: 'App\Entity\SiteBuilder\Plugin\TextPlugin'
 
+    App\EventListener\Doctrine\PageBuilder\PaletteGridItemListener:
+        tags:
+            - name: doctrine.orm.entity_listener
+              event: postLoad
+              entity: 'App\Entity\SiteBuilder\Plugin\PaletteGridItem'
 
     App\Service\Plugin\TextPluginService:
         tags:
