--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@types/underscore": "^1.11.3",
     "bootstrap": "^4.5.0",
     "document-offset": "^1.0.4",
     "gridstack": "^2.0.0",
@@ -34,6 +35,7 @@
     "rxjs": "^6.5.5",
     "sortablejs": "^1.10.2",
     "tslib": "^2.0.0",
+    "underscore": "^1.13.1",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
