--- a/backend/sitebuilder/.env
+++ b/backend/sitebuilder/.env
@@ -40,3 +40,4 @@ JWT_PASSPHRASE=ac22ea81b158e5a6fdd339ec0a68f076
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
+USER_STORAGE_PATH_VAR=user/
