--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "document-offset": "^1.0.4",
     "gridstack": "^2.0.0",
     "jwt-decode": "^3.1.1",
+    "lodash": "^4.17.21",
     "material-design-icons": "^3.0.1",
     "ngx-gravatar": "^10.0.0",
     "ngx-sortablejs": "^3.1.4",
