Submenu for context menu

--- a/backend/sitebuilder/.env
+++ b/backend/sitebuilder/.env
@@ -41,3 +41,4 @@ JWT_PASSPHRASE=ac22ea81b158e5a6fdd339ec0a68f076
 CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
 USER_STORAGE_PATH_VAR=user/
+PUBLIC_SERVER_PORT=8000
