--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -31,6 +31,7 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
+              "node_modules/ngx-drag-to-select/ngx-drag-to-select.css",
               "src/app/shared/context-menu/directives/style.css",
               "src/assets/admin_lte/plugins/fontawesome-free/css/all.min.css",
               "src/assets/admin_lte/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css",
