--- a/backend/sitebuilder/config/routes.yaml
+++ b/backend/sitebuilder/config/routes.yaml
@@ -1,2 +1,8 @@
 api_login_check:
   path: /api/login_check
+
+plugin:
+  resource: "../src/Controller/Plugin/"
+  type:     annotation
+  prefix:   /plugin
+
