--- a/backend/sitebuilder/config/services.yaml
+++ b/backend/sitebuilder/config/services.yaml
@@ -66,7 +66,7 @@ services:
         tags:
             - { name: 'plugin_service', key: 'image_plugin' }
 
-    App\Service\Plugin\PluginService:
+    App\Service\Plugin\PluginServiceService:
         arguments: [!tagged { tag: 'plugin_service', index_by: 'key' }]
 
     App\Form\SiteBuilder\EventSubscriber\AddPluginFieldSubscriber:
