--- a/backend/sitebuilder/config/services.yaml
+++ b/backend/sitebuilder/config/services.yaml
@@ -48,10 +48,8 @@ services:
                 entity: 'App\Entity\SiteBuilder\Plugin\TextPlugin'
 
     App\EventListener\Doctrine\PageBuilder\PaletteGridItemListener:
-        tags:
-            - name: doctrine.orm.entity_listener
-              event: postLoad
-              entity: 'App\Entity\SiteBuilder\Plugin\PaletteGridItem'
+        - { name: doctrine.orm.entity_listener, event: preRemove, entity: 'App\Entity\SiteBuilder\PaletteGridItem' }
+        - { name: doctrine.orm.entity_listener, event: preUpdate, entity: 'App\Entity\SiteBuilder\PaletteGridItem' }
 
     App\EventListener\Doctrine\PageBuilder\BasePluginListener:
         tags:
