--- a/backend/docker-backend/docker-compose-dev-local.yml
+++ b/backend/docker-backend/docker-compose-dev-local.yml
@@ -48,6 +48,14 @@ services:
     ports:
       - 8080:8080
 
+  redis:
+    image: redis:latest
+    networks:
+      docker_network_sitebuilder:
+        ipv4_address: 10.3.0.8
+    ports:
+      - 6379:6379
+
 networks:
   docker_network_sitebuilder:
     ipam:
