--- a/backend/sitebuilder/.env
+++ b/backend/sitebuilder/.env
@@ -42,3 +42,9 @@ CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
 USER_STORAGE_PATH_VAR=user/
 PUBLIC_SERVER_PORT=8000
+
+###> snc/redis-bundle ###
+# passwords that contain special characters (@, %, :, +) must be urlencoded
+REDIS_HOST=10.3.0.8
+REDIS_PORT=6379
+###< snc/redis-bundle ###
