--- a/backend/sitebuilder/composer.json
+++ b/backend/sitebuilder/composer.json
@@ -16,7 +16,9 @@
         "lexik/jwt-authentication-bundle": "^2.8",
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
+        "predis/predis": "^2.0",
         "sensio/framework-extra-bundle": "^5.1",
+        "snc/redis-bundle": "^4.5",
         "stof/doctrine-extensions-bundle": "^1.6",
         "symfony/asset": "5.3.*",
         "symfony/console": "5.3.*",
