--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,31 +8,36 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.13",
-    "@angular/cdk": "^10.2.7",
-    "@angular/common": "~12.2.13",
-    "@angular/compiler": "~12.2.13",
-    "@angular/core": "~12.2.13",
-    "@angular/forms": "~12.2.13",
-    "@angular/localize": "~12.2.13",
-    "@angular/material": "^10.2.7",
-    "@angular/platform-browser": "~12.2.13",
-    "@angular/platform-browser-dynamic": "~12.2.13",
-    "@angular/router": "~12.2.13",
+    "@angular/animations": "^15.0.0",
+    "@angular/cdk": "^15.0.0",
+    "@angular/common": "^15.0.0",
+    "@angular/compiler": "^15.0.0",
+    "@angular/core": "^15.0.0",
+    "@angular/forms": "^15.0.0",
+    "@angular/localize": "^15.0.0",
+    "@angular/material": "^15.0.0",
+    "@angular/platform-browser": "^15.0.0",
+    "@angular/platform-browser-dynamic": "^15.0.0",
+    "@angular/router": "^15.0.0",
+    "@babel/core": "^7.20.12",
     "@ckeditor/ckeditor5-angular": "^4.0.0",
     "@ckeditor/ckeditor5-build-classic": "^35.3.2",
-    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/angular-fontawesome": "^0.12.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.1",
+    "@popperjs/core": "^2.11.6",
+    "@types/popper.js": "^1.11.0",
     "@types/underscore": "^1.11.3",
-    "bootstrap": "^4.5.0",
+    "angular-mixed-cdk-drag-drop": "^2.0.0",
+    "bootstrap": "^5.2.3",
     "document-offset": "^1.0.4",
     "gridstack": "^2.0.0",
     "jwt-decode": "^3.1.1",
@@ -40,10 +45,10 @@
     "material-design-icons": "^3.0.1",
     "material-icons": "^1.11.5",
     "ngx-drag-to-select": "^4.2.1",
-    "ngx-file-icons": "0.0.3",
+    "ngx-file-icons": "^0.0.3",
     "ngx-gravatar": "^10.0.0",
-    "ngx-sortablejs": "^3.1.4",
-    "ngx-toastr": "^13.1.0",
+    "ngx-sortablejs": "^11.0.0",
+    "ngx-toastr": "^16.0.2",
     "rxjs": "^6.5.5",
     "sortablejs": "^1.10.2",
     "tslib": "^2.0.0",
@@ -51,18 +56,27 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^10.0.0",
-    "@angular-builders/dev-server": "^7.3.1",
-    "@angular-devkit/build-angular": "~12.2.13",
-    "@angular/cli": "~12.2.13",
-    "@angular/compiler-cli": "~12.2.13",
+    "@angular-builders/custom-webpack": "^15.0.0",
+    "@angular-builders/dev-server": "^7.0.0",
+    "@angular-devkit/build-angular": "^15.0.0",
+    "@angular-eslint/builder": "15.2.0",
+    "@angular-eslint/eslint-plugin": "15.2.0",
+    "@angular-eslint/eslint-plugin-template": "15.2.0",
+    "@angular-eslint/schematics": "15.2.0",
+    "@angular-eslint/template-parser": "15.2.0",
+    "@angular/cli": "^15.0.0",
+    "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.5.1",
     "@types/jqueryui": "^1.12.13",
     "@types/node": "^12.11.1",
     "@types/sortablejs": "^1.10.5",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "codelyzer": "^6.0.0",
+    "eslint": "^8.28.0",
+    "husky": "^8.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.9",
@@ -73,6 +87,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "^4.8.0"
   }
 }
