--- a/backend/sitebuilder/config/services.yaml
+++ b/backend/sitebuilder/config/services.yaml
@@ -45,7 +45,7 @@ services:
             -
                 name: doctrine.orm.entity_listener
                 event: postLoad
-                entity: 'App\Entity\SiteBuilder\Plugin\TextPlugin'
+                entity: 'App\Entity\SiteBuilder\Plugin\BasePlugin'
 
     App\EventListener\Doctrine\PageBuilder\PaletteGridItemListener:
         - { name: doctrine.orm.entity_listener, event: preRemove, entity: 'App\Entity\SiteBuilder\PaletteGridItem' }
