--- a/backend/sitebuilder/.gitignore
+++ b/backend/sitebuilder/.gitignore
@@ -2,3 +2,7 @@
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
+
+###> phpstan/phpstan ###
+phpstan.neon
+###< phpstan/phpstan ###
