--- a/backend/sitebuilder/.env
+++ b/backend/sitebuilder/.env
@@ -48,3 +48,8 @@ PUBLIC_SERVER_PORT=8000
 REDIS_HOST=10.3.0.8
 REDIS_PORT=6379
 ###< snc/redis-bundle ###
+
+###> nzo/url-encryptor-bundle ###
+NZO_ENCRYPTOR_SECRET=se5g45se4g54F4e
+NZO_ENCRYPTOR_IV=se5g45se4g54F4e
+###< nzo/url-encryptor-bundle ###
