--- a/backend/sitebuilder/config/services.yaml
+++ b/backend/sitebuilder/config/services.yaml
@@ -82,6 +82,10 @@ services:
     App\Form\SiteBuilder\EventSubscriber\AddPluginFieldSubscriber:
         arguments: [!tagged { tag: 'plugin_service', index_by: 'key' }]
 
+    App\EventListener\Doctrine\PageBuilder\Plugin\FormListener:
+        tags:
+            - { name: doctrine.orm.entity_listener, event: postLoad, entity: 'App\Entity\SiteBuilder\Plugin\Form\PluginForm' }
+
     Predis\Client:
         arguments:
             - host: '%env(REDIS_HOST)%'
