--- a/backend/sitebuilder/.env
+++ b/backend/sitebuilder/.env
@@ -34,6 +34,7 @@ APP_SECRET=7973274c0fecbeeae52f251b332bf746
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_SECRET="fe45g4e45g44454wf552"
 JWT_PASSPHRASE=ac22ea81b158e5a6fdd339ec0a68f076
 ###< lexik/jwt-authentication-bundle ###
 
@@ -42,6 +43,9 @@ CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
 USER_STORAGE_PATH_VAR=user/
 PUBLIC_SERVER_PORT=8000
+
+DATABASE_PASS="ag58#grg1@G8hR5"
+DB_HOST=10.3.0.3
 
 ###> snc/redis-bundle ###
 # passwords that contain special characters (@, %, :, +) must be urlencoded
