--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^14.0.1",
     "@popperjs/core": "^2.11.6",
+    "@tinymce/tinymce-angular": "^7.0.0",
     "@types/popper.js": "^1.11.0",
     "@types/underscore": "^1.11.3",
     "angular-mixed-cdk-drag-drop": "^2.0.0",
@@ -51,6 +52,7 @@
     "ngx-toastr": "^16.0.2",
     "rxjs": "^6.5.5",
     "sortablejs": "^1.15.0",
+    "tinymce": "^6.7.2",
     "tslib": "^2.0.0",
     "underscore": "^1.13.1",
     "zone.js": "~0.11.4"
