--- a/backend/sitebuilder/config/services.yaml
+++ b/backend/sitebuilder/config/services.yaml
@@ -48,8 +48,18 @@ services:
                 entity: 'App\Entity\SiteBuilder\Plugin\BasePlugin'
 
     App\EventListener\Doctrine\PageBuilder\PaletteGridItemListener:
-        - { name: doctrine.orm.entity_listener, event: preRemove, entity: 'App\Entity\SiteBuilder\PaletteGridItem' }
-        - { name: doctrine.orm.entity_listener, event: preUpdate, entity: 'App\Entity\SiteBuilder\PaletteGridItem' }
+        tags:
+            - { name: doctrine.orm.entity_listener, event: preRemove, entity: 'App\Entity\SiteBuilder\PaletteGridItem' }
+            - { name: doctrine.orm.entity_listener, event: preUpdate, entity: 'App\Entity\SiteBuilder\PaletteGridItem' }
+
+    App\EventListener\Doctrine\PageBuilder\GridCellItemListener:
+        tags:
+            - { name: doctrine.orm.entity_listener, event: preRemove, entity: 'App\Entity\SiteBuilder\GridCellItem' }
+            - { name: doctrine.orm.entity_listener, event: preUpdate, entity: 'App\Entity\SiteBuilder\GridCellItem' }
+
+    App\EventListener\Doctrine\PageBuilder\GridCellListener:
+        tags:
+            - { name: doctrine.orm.entity_listener, event: preRemove, entity: 'App\Entity\SiteBuilder\GridCell' }
 
     App\EventListener\Doctrine\PageBuilder\BasePluginListener:
         tags:
