--- a/backend/sitebuilder/config/packages/security.yaml
+++ b/backend/sitebuilder/config/packages/security.yaml
@@ -48,6 +48,9 @@ security:
             anonymous: true
             lazy: true
 
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+
     access_control:
          - { path: ^/security/token, roles: IS_AUTHENTICATED_ANONYMOUSLY }
          - { path: ^/user/registration, roles: IS_AUTHENTICATED_ANONYMOUSLY }
