--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "bootstrap": "^5.2.3",
     "document-offset": "^1.0.4",
     "gridstack": "^8.3.0",
+    "html2canvas": "^1.4.1",
     "jwt-decode": "^3.1.1",
     "lodash": "^4.17.21",
     "material-design-icons": "^3.0.1",
