--- a/docker-backend/config/nginx/backend-dev-local/sites-available/default.conf
+++ b/docker-backend/config/nginx/backend-dev-local/sites-available/default.conf
@@ -1,9 +1,29 @@
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server ipv6only=on;
+        listen 80 default_server;
+        listen 4201 default_server;
+        listen [::]:4201 ipv6only=on default_server;
+        root /var/www;
+        location / {
+            try_files /frontend/dist/frontend-public/$uri /frontend/dist/frontend-public/$uri/ /backend/public/$uri /frontend/dist/frontend-public/public-index.html =404;
+        }
+    }
+
+server {
+        listen 80;
+        server_name localhost;
+        root /var/www;
+        index admin-index.html;
+        location / {
+            try_files /frontend/dist/frontend-admin/$uri /frontend/dist/frontend-admin/$uri/ /backend/public/$uri /frontend/dist/frontend-admin/admin-index.html =404;
+        }
+    }
+
+server {
+    listen 8080;
+    listen [::]:8080 ipv6only=on;
 
     server_name localhost;
-    root /var/www/public;
+    root /var/www/backend/public;
     index index.php index.html index.htm;
 
     location / {
