--- a/docker-backend/docker-compose-dev-local.yml
+++ b/docker-backend/docker-compose-dev-local.yml
@@ -12,41 +12,26 @@ services:
 
   backend-nginx:
     ports:
-      - "8000:80"
+      - "80:80"
+      - "8080:8080"
     networks:
       docker_network_sitebuilder:
         ipv4_address: 10.3.0.4
     volumes:
-      - ../sitebuilder:/var/www
+      - ../backend/sitebuilder:/var/www/backend
+      - ../frontend:/var/www/frontend
       - ./config/nginx/backend-dev-local/nginx.conf:/etc/nginx/nginx.conf
       - ./config/nginx/backend-dev-local/sites-available:/etc/nginx/sites-available
       - ./config/nginx/backend-dev-local/conf.d:/etc/nginx/conf.d
-
-  php-fpm:
-    networks:
-      docker_network_sitebuilder:
-        ipv4_address: 10.3.0.6
-    volumes:
-      - ../sitebuilder:/var/www
-    environment:
-      - NODE_ENV=dev-local
 
   php-fpm-8.0:
     networks:
       docker_network_sitebuilder:
         ipv4_address: 10.3.0.7
     volumes:
-      - ../sitebuilder:/var/www
+      - ../backend/sitebuilder:/var/www/backend
     environment:
       - NODE_ENV=dev-local
-
-  adminer:
-    image: adminer:latest
-    networks:
-      docker_network_sitebuilder:
-        ipv4_address: 10.3.0.5
-    ports:
-      - 8080:8080
 
   redis:
     image: redis:latest
