--- a/backend/sitebuilder/.env
+++ b/backend/sitebuilder/.env
@@ -12,7 +12,7 @@
 #
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
-
+APP_DOMAIN="localhost"
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=7973274c0fecbeeae52f251b332bf746
@@ -56,3 +56,9 @@ REDIS_PORT=6379
 NZO_ENCRYPTOR_SECRET=se5g45se4g54F4e
 NZO_ENCRYPTOR_IV=se5g45se4g54F4e
 ###< nzo/url-encryptor-bundle ###
+
+###> symfony/lock ###
+# Choose one of the stores below
+# postgresql+advisory://db_user:db_password@localhost/db_name
+LOCK_DSN=flock
+###< symfony/lock ###
