--- a/backend/sitebuilder/config/services.yaml
+++ b/backend/sitebuilder/config/services.yaml
@@ -49,7 +49,7 @@ services:
             -
                 name: doctrine.orm.entity_listener
                 event: postLoad
-                entity: 'App\Entity\SiteBuilder\Plugin\BasePlugin'
+                entity: 'App\Entity\Plugin\BasePlugin'
 
     App\EventListener\Doctrine\PageBuilder\PaletteGridItemListener:
         tags:
