--- a/backend/sitebuilder/config/services.yaml
+++ b/backend/sitebuilder/config/services.yaml
@@ -65,6 +65,12 @@ services:
         tags:
             - { name: doctrine.orm.entity_listener, event: preRemove, entity: 'App\Entity\SiteBuilder\GridCell' }
 
+    App\EventListener\Doctrine\PageListener:
+        tags:
+#            - {name: doctrine.orm.entity_listener, event: 'preUpdate', entity: 'App\Entity\Page'}
+            - {name: doctrine.orm.entity_listener, event: 'prePersist', entity: 'App\Entity\Page'}
+            - {name: doctrine.orm.entity_listener, event: 'preRemove', entity: 'App\Entity\Page'}
+
     App\EventListener\Doctrine\PageBuilder\BasePluginListener:
         tags:
             - { name: doctrine.orm.entity_listener, event: prePersist, entity: 'App\Entity\SiteBuilder\Plugin\BasePlugin' }
