--- a/docker-backend/config/nginx/backend-dev-local/sites-available/default.conf
+++ b/docker-backend/config/nginx/backend-dev-local/sites-available/default.conf
@@ -4,7 +4,7 @@ server {
         listen [::]:4201 ipv6only=on default_server;
         root /var/www;
         location / {
-            try_files /frontend/dist/frontend-public/$uri /frontend/dist/frontend-public/$uri/ /backend/public/$uri /frontend/dist/frontend-public/public-index.html =404;
+            try_files /frontend/dist/frontend-public/$uri /backend/public/$uri /frontend/dist/frontend-public/public-index.html =404;
         }
     }
 
