--- a/backend/sitebuilder/config/services.yaml
+++ b/backend/sitebuilder/config/services.yaml
@@ -67,8 +67,8 @@ services:
 
     App\EventListener\Doctrine\PageListener:
         tags:
-            - {name: doctrine.orm.entity_listener, event: 'prePersist', entity: 'App\Entity\Page'}
-            - {name: doctrine.orm.entity_listener, event: 'preRemove', entity: 'App\Entity\Page'}
+            - {name: doctrine.orm.entity_listener, event: 'prePersist', entity: 'App\Entity\Page\Page'}
+            - {name: doctrine.orm.entity_listener, event: 'preRemove', entity: 'App\Entity\Page\Page'}
             - {name: 'doctrine.event_listener', event: 'onFlush'}
 
     App\EventListener\Doctrine\PageBuilder\BasePluginListener:
