--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -33,7 +33,8 @@
               "src/app/core/modules/context-menu/directives/style.css",
               "src/assets/admin_lte/plugins/fontawesome-free/css/all.min.css",
               "src/assets/admin_lte/dist/css/custom_adminlte.css",
-              "node_modules/ngx-toastr/toastr.css"
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/nanogallery2/dist/css/nanogallery2.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
@@ -41,7 +42,9 @@
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
               "src/assets/admin_lte/dist/js/adminlte.min.js",
               "node_modules/lodash/lodash.min.js",
-              "node_modules/youtube-background/jquery.youtube-background.js"
+              "node_modules/youtube-background/jquery.youtube-background.js",
+              "node_modules/nanogallery2/dist/jquery.nanogallery2.js"
+
             ]
           },
           "configurations": {
