--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,11 +35,13 @@
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "nanogallery2": "^3.0.5",
     "ngx-drag-to-select": "^5.0.1",
     "ngx-gravatar": "^13.0.0",
     "ngx-toastr": "^19.0.0",
     "nxt-sortablejs": "^17.0.0",
     "rxjs": "~7.8.0",
+    "simplelightbox": "^2.14.3",
     "sortablejs": "^1.15.2",
     "tslib": "^2.3.0",
     "underscore": "^1.13.6",
