--- a/backend/sitebuilder/.env
+++ b/backend/sitebuilder/.env
@@ -21,7 +21,7 @@ APP_SECRET=7973274c0fecbeeae52f251b332bf746
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
