--- a/backend/sitebuilder/composer.json
+++ b/backend/sitebuilder/composer.json
@@ -2,7 +2,7 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": ">=8.0",
+        "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
@@ -13,6 +13,7 @@
         "doctrine/orm": "^2.7",
         "friendsofsymfony/jsrouting-bundle": "^2.7",
         "gedmo/doctrine-extensions": "^3.13",
+        "google/apiclient": "^2.17",
         "jms/serializer-bundle": "^3.7.0",
         "lexik/jwt-authentication-bundle": "^2.8",
         "nelmio/cors-bundle": "^2.1",
